--- a/admin/admin.css
+++ b/admin/admin.css
@@ -85,6 +85,11 @@ body {
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
 
+.centerinfo{
+    font-size: 1rem;
+     color: #999;
+}
+
 /*
  * Utilities
  */
